# scikit-spatial

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  additional_functions_notes.py  coverage.xml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  main.yml  publish.yml  scikit_spatial.yaml
ci/scripts/: basic_stage.sh  docs.sh  run_docker_stages.sh  run_stage.sh  run_stages.sh  unit.sh
doc/source/: conf.py  index.rst  intersection.rst  objects.rst  plotting.rst  point_vector.rst  skspatial.measurement.rst  skspatial.objects.Line.rst  skspatial.objects.Plane.rst  skspatial.objects.Vector.rst
doc/source/api_reference/: skspatial.measurement.rst  skspatial.objects.Circle.rst  skspatial.objects.Line.rst  skspatial.objects.Plane.rst  skspatial.objects.Point.rst  skspatial.objects.Points.rst  skspatial.objects.Sphere.rst  skspatial.objects.Triangle.rst  skspatial.objects.Vector.rst  skspatial.objects.rst  skspatial.transformation.rst  toc.rst
doc/source/computations/: comparison.rst  fitting.rst  intersection.rst  measurement.rst  projection.rst  toc.rst  transformation.rst
doc/source/computations/comparison/: skspatial.objects.Circle.intersect_line.rst  skspatial.objects.Points.are_collinear.rst  skspatial.objects.Points.are_concurrent.rst
doc/source/objects/: line.rst  plane.rst  point_vector.rst  points.rst  sphere.rst  toc.rst  triangle.rst
doc/source/source_code/: skspatial.objects.Point.rst  skspatial.objects.Points.rst  skspatial.objects.rst  toc.rst
docs/source/: conf.py  index.rst  plotting.rst  requirements.txt
docs/source/api_reference/: skspatial.measurement.rst  skspatial.objects.Circle.rst  skspatial.objects.Cylinder.rst  skspatial.objects.Line.rst  skspatial.objects.LineSegment.rst  skspatial.objects.Plane.rst  skspatial.objects.Point.rst  skspatial.objects.Points.rst  skspatial.objects.Sphere.rst  skspatial.objects.Triangle.rst  skspatial.objects.Vector.rst  skspatial.objects.rst
docs/source/computations/: comparison.rst  fitting.rst  intersection.rst
docs/source/gallery/: index.rst
docs/source/gallery/fitting/: plot_line_2d.py  (+12 more)
docs/source/objects/: circle.rst  cylinder.rst  line.rst  line_segment.rst  point_vector.rst  sphere.rst  toc.rst  triangle.rst
examples/: README.txt
examples/fitting/: README.txt  plot_line_2d.py  plot_line_3d.py  plot_plane.py
examples/intersection/: README.txt  plot_circle_circle.py  plot_cylinder_line.py  plot_cylinder_plane.py  plot_cylinder_plane_1.py  plot_line_circle.py  plot_line_line_2d.py  plot_line_line_3d.py  plot_line_plane.py  plot_plane_plane.py  plot_sphere_line.py  plot_sphere_plane.py
examples/projection/: README.txt  plot_line_plane.py  plot_point_line.py  plot_point_plane.py  plot_vector_line.py  plot_vector_plane.py  plot_vector_vector.py
examples/triangle/: README.txt  plot_normal.py  plot_orthocenter.py
requirements/: base.txt  base_test.txt  docs.txt  format.txt  lint_code.txt  lint_docs.txt  property.txt  property_tests.txt  tests.txt  tox.txt  types.txt  unit.txt
scikit-spatial-stubs/matplotlib/axes/: __init__.pyi
skspatial/: __init__.py  _base_spatial.py  _functions.py  _plotting.py  area.py  comparison.py  constants.py  distance.py  intersection.py  measurement.py  plane.py  plotting.py  projection.py  properties.py  reduction.py  transformation.py  typing.py
skspatial/objects/: __init__.py  _base_array.py  _base_composite.py  _base_line_plane.py  _base_sphere.py  _mixins.py  array.py  array_objects.py  base_array.py  base_classes.py  base_line_plane.py  circle.py  composite.py  cylinder.py  line.py  line_plane.py  plane.py  point.py  points.py  sphere.py  triangle.py  vector.py
skspatial/plotting/: __init__.py  helpers.py  plotting_2d.py  plotting_3d.py
skspatial/tests/property/: constants.py  strategies.py  test_comparison.py  test_fitting.py  test_measurement.py  test_plotting.py  test_projection.py  test_transformation.py
skspatial/tests/unit/: test_comparison.py  test_fitting.py  test_intersection.py  test_measurement.py  test_plotting.py  test_projection.py  test_repr.py  test_transformation.py
src/skspatial/: __init__.py  _functions.py  geometric_functions.py  measurement.py  plotting.py  transformation.py  typing.py
src/skspatial/custom_functions/: __init__.py
src/skspatial/objects/: __init__.py  _base_array.py  _base_line_plane.py  _base_spatial.py  _base_sphere.py  _mixins.py  circle.py  circle3D.py  cylinder.py  elipse3D.py  line.py  line_segment.py  plane.py  point.py  points.py  sphere.py  triangle.py  vector.py
stubs/matplotlib/axes/: __init__.pyi
stubs/matplotlib/figure/: __init__.pyi
stubs/matplotlib/pyplot/: __init__.pyi
stubs/mpl_toolkits/mplot3d/: __init__.pyi
stubs/numpy/: __init__.pyi
tests/: strategies.py  test_arrays.py
tests/property/: constants.py  strategies.py  test_arrays.py  test_comparison.py  test_fitting.py  test_line.py  test_measurement.py  test_objects.py  test_plotting.py  test_point.py  test_projection.py  test_transformation.py  test_vector.py
tests/property/objects/: test_array_1d.py  test_array_objects.py  test_line.py  test_plane.py  test_point.py  test_triangle.py  test_vector.py
tests/unit/: test_arrays.py  test_comparison.py  test_dimension.py  test_fit.py  test_fitting.py  test_functions.py  test_intersection.py  test_line.py  test_line_plane.py  test_measurement.py  test_plane.py  test_plotting.py  test_point.py  test_projection.py  test_repr.py  test_transformation.py  test_vector.py
tests/unit/objects/: test_all_objects.py  test_array_1d.py  test_array_objects.py  test_base_array.py  test_base_array_1d.py  test_base_array_2d.py  test_base_line_plane.py  test_circle.py  test_cylinder.py  test_line.py  test_line_plane.py  test_line_segment.py  test_plane.py  test_point.py  test_points.py  test_sphere.py  test_triangle.py  test_vector.py
(+206 files in other folders)
