[tool.poetry]

name = "scikit-spatial"
version = "7.1.0"
description = "Spatial objects and computations based on NumPy arrays."
license = "BSD-3-Clause"

authors = ["Andrew Hynes <andrewjhynes@gmail.com>"]

readme = "README.rst"

repository = "https://github.com/ajhynes7/scikit-spatial"
documentation = "https://scikit-spatial.readthedocs.io"

keywords = ["NumPy", "matplotlib", "visualization", "spatial", "linear algebra"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

packages = [{ include = "skspatial", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = [
    { version = "^1.24", python = "<3.12" },
    { version = "^1.26", python = ">=3.12" },
]
scipy = [
    { version = "^1.9", python = "<3.12" },
    { version = "^1.12", python = ">=3.12" },
]
matplotlib = "^3.6"

[tool.poetry.group.base_test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.group.property_test.dependencies]
hypothesis = "^6.56.2"

[tool.poetry.group.base_test]
optional = true

[tool.poetry.group.property_test]
optional = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pydocstyle]
convention = 'numpy'
add-ignore = 'D104, D105'
